force-app/main/default/objects/Answer__c/fields/AnswerRating__c.field-meta.xml
<CustomField>
    <fullName>AnswerRating__c</fullName>
    <description>Field to capture the rating for an answer.</description>
    <label>Rating</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>