force-app/main/default/objects/Answer__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Field to capture the description for an answer.</description>
    <inlineHelpText>Please provide a detailed description of the answer.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>