force-app/main/default/objects/Answer__c/fields/Number_of_Dislikes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dislikes__c</fullName>
    <description>Field to capture the number of dislikes for an answer.</description>
    <label>Number of Dislikes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>