force-app/main/default/objects/Answer__c/fields/Number_of_Likes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Likes__c</fullName>
    <description>Field to capture the number of likes provided for an answer.</description>
    <label>Number of Likes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>