force-app/main/default/objects/Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field to capture the parent Question for the answer being provided.</description>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>