force-app/main/default/objects/Answer__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Field to capture the rating for any answer. It is calculated based on the number of likes and dislikes provided to an answer by the users in QA Forum.</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating-TBD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>